k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero2prod-api-svc
  namespace: zero2prod
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: zero2prod

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero2prod-api
  namespace: zero2prod
spec:
  selector:
    matchLabels:
      app: zero2prod
  replicas: 1
  template:
    metadata:
      labels:
        app: zero2prod
    spec:
      containers:
      - name: zero2prod
        image: ghcr.io/marcobacis/zero2prod:sha-45929df
        ports:
        - containerPort: 80
          name:
