k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: zero2prod
  labels:
    app: zero2prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zero2prod
  template:
    metadata:
      labels:
        app: zero2prod
    spec:
      containers:
      - name: redis
        image: redis:8.0-rc1-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: zero2prod
  labels:
    app: zero2prod
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: zero2prod
